# dataWarehouseLowBudget

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: update-contract.yml
docs/: index.md
dwlowbudget/: .user.yml  dbt_project.yml  profiles.yml
dwlowbudget/models/: sources.yml
dwlowbudget/models/fato/: fato_transactions.sql  fato_transactions.yml
dwlowbudget/models/kpi/: top5_most_sales.sql
dwlowbudget/models/src/: src_transactions.sql
keys/: .env-example
sql/: access_aws.sql  convert_multiple_files.py  multiples_csv_files.sql  saving_in_parquet.sql
src/: app.py  backend.py  frontend.py
