[tool.poetry]
name = "mydefaultdataproject"
version = "0.1.0"
description = ""
authors = ["Alan Lanceloth Rodrigues Silva <alan.lanceloth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ignr = "^2.2"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.8.0"
pygments = "^2.17.2"
mkdocs-material = "^9.5.5"
pymdown-extensions = "^10.7"
mkdocs-bootstrap386 = "^0.0.2"
duckdb = "^0.9.2"
dbt-duckdb = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
